Added fully working options module, move to another repo? jimmydorry? sinz?

--- a/statcollection/scripts/stat_collection.kv
+++ b/statcollection/scripts/stat_collection.kv
@@ -3,10 +3,14 @@
     "live"                  "0"
 
     // Test Settings
-    "SERVER_ADDRESS_TEST"   "176.31.182.87"
-    "SERVER_PORT_TEST"      "4444"
+    "SERVER_ADDRESS_TEST"   "192.184.89.215"
+    "SERVER_PORT_TEST"      "80"
+    "SERVER_HOST_TEST"      "ash47.net"
+    "SERVER_PATH_TEST"      "/test.php"
 
     // Live Settings
-    "SERVER_ADDRESS_LIVE"   "176.31.182.87"
-    "SERVER_PORT_LIVE"      "4445"
+    "SERVER_ADDRESS_LIVE"   "192.184.89.215"
+    "SERVER_PORT_LIVE"      "80"
+    "SERVER_HOST_LIVE"      "ash47.net"
+    "SERVER_PATH_LIVE"      "/test.php"
 }
