--- a/scripts/vscripts/statcollection/settings.kv
+++ b/scripts/vscripts/statcollection/settings.kv
@@ -4,13 +4,16 @@
     "modID"             "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
     "schemaID"          "XXXXXXXXXXXXXXXX"
 
-    -- Do we need to enable the round API or not.
+    // Do we need to enable the round API or not.
     "HAS_ROUNDS"        "true"
 
-    -- Do we want statCollection to use team winner for game victory?
+    // Do we want statCollection to use team winner for game victory?
     "GAME_WINNER"       "true"
 
-    -- Do we want statCollection to use ancient explosions for game victory?
-    "ANCIENT_EXPLOSION" "true"
+    // Do we want statCollection to use ancient explosions for game victory?
+    "ANCIENT_EXPLOSION" "false"
+
+    // Turn this off to prevent from sending stats of workshop tools developer lobbies
+    "TESTING"           "true"
 
 }
