Adjusted defaults, added MIN_PLAYERS

--- a/scripts/vscripts/statcollection/settings.kv
+++ b/scripts/vscripts/statcollection/settings.kv
@@ -5,15 +5,17 @@
     "schemaID"          "XXXXXXXXXXXXXXXX"
 
     // Do we need to enable the round API or not.
-    "HAS_ROUNDS"        "true"
+    "HAS_ROUNDS"        "false"
 
     // Do we want statCollection to use team winner for game victory?
     "GAME_WINNER"       "true"
 
     // Do we want statCollection to use ancient explosions for game victory?
-    "ANCIENT_EXPLOSION" "false"
+    "ANCIENT_EXPLOSION" "true"
 
     // Turn this off to prevent from sending stats of workshop tools developer lobbies
     "TESTING"           "true"
 
+    // Stats for live games will only be recorded if the lobby has at least this amount of players
+    "MIN_PLAYERS"       "2"
 }
