schema handling improvements

--- a/scripts/vscripts/statcollection/settings.kv
+++ b/scripts/vscripts/statcollection/settings.kv
@@ -4,6 +4,9 @@
     "modID"             "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
     "schemaID"          "XXXXXXXXXXXXXXXX"
 
+    // Whether this mod is setup to implement custom stats
+    "HAS_SCHEMA"        "false"
+
     // Do we need to enable the round API or not.
     "HAS_ROUNDS"        "false"
 
