--- a/scripts/vscripts/statcollection/settings.kv
+++ b/scripts/vscripts/statcollection/settings.kv
@@ -20,5 +20,6 @@
     "TESTING"           "true"
 
     // Stats for live games will only be recorded if the lobby has at least this amount of players
+    // A TESTING parameter of `true` allows stats regardless of the minimum players
     "MIN_PLAYERS"       "2"
 }
