Changed HAS_SCHEMA for default 16X checking

--- a/scripts/vscripts/statcollection/settings.kv
+++ b/scripts/vscripts/statcollection/settings.kv
@@ -1,11 +1,11 @@
 "StatInfo"
 {
-
+    // Registered gamemode ID from http://getdotastats.com/#s2__my__mods
     "modID"             "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
+    
+    // If you want to implement custom stats, contact an admin to setup your schema and change this ID
+    // Otherwise leave it unchanged
     "schemaID"          "XXXXXXXXXXXXXXXX"
-
-    // Whether this mod is setup to implement custom stats
-    "HAS_SCHEMA"        "false"
 
     // Do we need to enable the round API or not.
     "HAS_ROUNDS"        "false"
